# starflow

./: Makefile  README.md  pyproject.toml
.github/workflows/: lint-python.yaml  self-test-qa.yaml
docs/: .custom_wordlist.txt  conf.py  index.rst
docs/explanation/: community-engagement-plan-for-documentation.rst
docs/how-to/: add-a-page-meta-description.rst  starcraft-style-guide.rst
