[project]
name = "starflow"
version = "0.1.0"
description = "Fake Python project for testing project scanning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "distro>=1.8.0",
    # setuptools >= 80.9 has a noisy warning about pkg_resources
    "setuptools~=80.8.0",
]

[dependency-groups]
docs = [
    "sphinx-lint~=1.0",
    "sphinxext-rediraffe==0.3.0",
    {include-group = "docs-starter-pack"},
]
# We disable the unused but default SP dependencies slated for removal
# https://warthogs.atlassian.net/browse/DOCPR-2387
docs-starter-pack = [
    "canonical-sphinx~=0.6",
    "myst-parser>=4.0.1",
    "packaging>=25.0",
    "rst2html>=2020.7.4",
    "sphinx-autobuild>=2024.10.3",
    # "sphinx-config-options>=0.1.0",
    # "sphinx-contributor-listing>=0.1.0",
    "sphinx-design>=0.6.1",
    # "sphinx-filtered-toctree>=0.1.0",
    # "sphinx-last-updated-by-git>=0.3.8",
    "sphinx-notfound-page>=1.1.0",
    "sphinx-related-links>=0.1.2",
    "sphinx-roles>=0.1.0",
    "sphinx-sitemap==2.9.0",
    # "sphinx-tabs>=3.4.5",
    "sphinx-terminal>=1.0.2",
    # "sphinx-ubuntu-images>=0.1.0",
    # "sphinx-youtube-links>=0.1.0",
    "sphinxcontrib-jquery>=4.1",
    # "sphinxcontrib-svg2pdfconverter[cairosvg]>=2.0.0",
    "sphinxext-opengraph>=0.13.0",
    "vale>=3.13.0.0",
]
